FunctionParser is in Expression package, according to Aviad design suggestions.